--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,6 @@ dependencies {
     // For developers using AndroidX in their applications
     implementation 'pub.devrel:easypermissions:3.0.0'
 
+//    implementation 'com.google.android.libraries.places:places:3.0.0'
+
 }
