--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,9 @@ dependencies {
     // For developers using AndroidX in their applications
     implementation 'pub.devrel:easypermissions:3.0.0'
     //implementation 'com.google.android.libraries.places:places:3.0.0'
-
+    implementation "androidx.work:work-runtime-ktx:2.5.0"
+    //Single RXJava
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.5'
 
 }
