--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,11 @@
         android:theme="@style/Theme.WeatherApplication"
         tools:targetApi="31">
 
+        <service
+            android:name=".workers.AlertService"
+            android:enabled="true"
+            android:exported="true"></service>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDoedG1Y17WiQCwp_shI0nx2U0_vkpF_9M" />
@@ -42,6 +47,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="false" />
+
     </application>
 
 </manifest>
